--- a/src/edit/style/antd.less
+++ b/src/edit/style/antd.less
@@ -1,17 +1,45 @@
-// 此文件仅支持覆写antd样式
+@import '~antd/dist/antd.less';
+@import './var.less';
+// 此文件仅支持覆写antd样式，以及全局样式重置，不要写页面内自定义样式，非CSS模块打包，样式名即为className
+#edit {
+    overflow: hidden;
+}
+
 #root {
-    ul,li,ol,dl,p,h1,h2,h3,h4,h5,h6,img,nav { margin: 0; padding: 0 }
-    ol,ul { list-style: none; }
+    ul, li, ol, dl, p, h1, h2, h3, h4, h5, h6, img, nav { margin: 0; padding: 0 }
+    ol, ul { list-style: none; }
+}
+
+::-webkit-scrollbar {
+    width: 4px;
+    height: 4px;
+}
+
+::-webkit-scrollbar-corner, ::-webkit-scrollbar-track {
+    background: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+    border-radius: 2px;
+    background-color: rgba(0,0,0,.1);
+}
+
+::-webkit-scrollbar-corner, ::-webkit-scrollbar-track {
+    background: transparent;
 }
 
 .ant-tabs-nav {
     margin-left: 10px;
-
-    .ant-tabs-tab {
-        height: auto;
-    }
 }
 
 .ant-tabs-top-bar {
     margin: 0;
+}
+
+.ant-menu-inline {
+    border: none;
+}
+
+.ant-tree-title {
+    white-space: nowrap;
 }
