--- a/src/edit/style/index.less
+++ b/src/edit/style/index.less
@@ -137,7 +137,9 @@
 
 .compName {
     color: @primary-color;
-    margin-left: 10px;
+    margin: 0 10px;
+    display: flex;
+    justify-content: space-between;
     .publicTextOverflow();
 }
 
