--- a/src/edit/style/changeBox.less
+++ b/src/edit/style/changeBox.less
@@ -92,18 +92,21 @@
     .topLeftTip {
         left: 0;
         top: 0;
+        z-index: 1;
     }
     
     .rightTip {
         right: 0;
         top: 50%;
         margin-top: -30px;
+        z-index: 1;
     }
     
     .topTip {
-        top: -59px;
+        top: 0px;
         left: 50%;
         margin-left: -45px;
+        z-index: 1;
     }
 }
 
